# CPPJUDGE

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cppjudge-tests.yml
docs/: nsjail-plan.md
problems/A+B/: problem.json
scripts/: check_nsjail_env.sh  preview_nsjail_cgroup_args.sh  run_nsjail_tests.sh  run_security_tests.sh  run_tests.sh
src/: comparer.cpp  comparer.h  compiler.cpp  compiler.h  config.h  judge.cpp  judge.h  main.cpp  runner.cpp  runner.h
submissions/: solution.cpp
submissions/tests/: ac.cpp  mle.cpp  ole.cpp  re.cpp  tle.cpp  wa.cpp
submissions/tests/security/: compile_include_passwd.cpp  core_dump.cpp  fork_many.cpp  fs_isolation.cpp  network_access.cpp  open_many_files.cpp  stderr_output.cpp
